--- a/ogt-ags-py/_modules/ogt/ogt_group.html
+++ b/ogt-ags-py/_modules/ogt/ogt_group.html
@@ -521,7 +521,7 @@ dl.glossary dd {
 
         <span class="k">if</span> <span class="bp">self</span><span class="o">.</span><span class="n">_headings_sort</span> <span class="o">==</span> <span class="bp">None</span><span class="p">:</span>
             <span class="n">dd</span> <span class="o">=</span> <span class="bp">self</span><span class="o">.</span><span class="n">data_dict</span><span class="p">()</span>
-            <span class="k">print</span> <span class="s2">&quot;dd=&quot;</span><span class="p">,</span> <span class="n">dd</span><span class="p">,</span> <span class="bp">self</span><span class="o">.</span><span class="n">headings</span>
+            <span class="c1">#print &quot;dd=&quot;, dd, self.headings</span>
             <span class="k">if</span> <span class="n">dd</span> <span class="o">==</span> <span class="bp">None</span><span class="p">:</span>
                 <span class="k">return</span> <span class="p">[]</span>
             <span class="bp">self</span><span class="o">.</span><span class="n">_headings_sort</span> <span class="o">=</span> <span class="p">[]</span>
