--- a/ogt-ags-py/ogtgui/index.html
+++ b/ogt-ags-py/ogtgui/index.html
@@ -26,7 +26,7 @@
     <link rel="shortcut icon" href="../_static/favicon.ico"/>
     <link rel="top" title="Open GeoTechnical AGS Tools" href="../index.html" />
     <link rel="next" title="ogtgui.main_window.*" href="main_window.html" />
-    <link rel="prev" title="ogt.ags4.*" href="../ogt/ags4.html" />
+    <link rel="prev" title="ogt: Base API" href="../ogt/index.html" />
 <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Neuton&amp;subset=latin" type="text/css" media="screen" charset="utf-8" />
 <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Nobile:regular,italic,bold,bolditalic&amp;subset=latin" type="text/css" media="screen" charset="utf-8" />
 <!--[if lte IE 6]>
@@ -430,7 +430,7 @@ dl.glossary dd {
           <a href="main_window.html" title="ogtgui.main_window.*"
              accesskey="N">next</a> |</li>
         <li class="right" >
-          <a href="../ogt/ags4.html" title="ogt.ags4.*"
+          <a href="../ogt/index.html" title="ogt: Base API"
              accesskey="P">previous</a> |</li>
         <li class="nav-item nav-item-0"><a href="../index.html">ogt-ags-py</a> &raquo;</li> 
       </ul>
@@ -484,8 +484,8 @@ dl.glossary dd {
 </ul>
 
   <h4>Previous topic</h4>
-  <p class="topless"><a href="../ogt/ags4.html"
-                        title="previous chapter">ogt.ags4.*</a></p>
+  <p class="topless"><a href="../ogt/index.html"
+                        title="previous chapter">ogt:  Base API</a></p>
   <h4>Next topic</h4>
   <p class="topless"><a href="main_window.html"
                         title="next chapter">ogtgui.main_window.*</a></p>
@@ -526,7 +526,7 @@ dl.glossary dd {
           <a href="main_window.html" title="ogtgui.main_window.*"
              >next</a> |</li>
         <li class="right" >
-          <a href="../ogt/ags4.html" title="ogt.ags4.*"
+          <a href="../ogt/index.html" title="ogt: Base API"
              >previous</a> |</li>
         <li class="nav-item nav-item-0"><a href="../index.html">ogt-ags-py</a> &raquo;</li> 
       </ul>
