--- a/search.html
+++ b/search.html
@@ -101,6 +101,7 @@
       </ul>
     </div>
     <div class="footer" role="contentinfo">
+      Last updated on 2017-01-30.
     </div>
   </body>
 </html>
