--- a/unofficial-ags-guide/ags4_data_dict.html
+++ b/unofficial-ags-guide/ags4_data_dict.html
@@ -26,7 +26,7 @@
     <script type="text/javascript" src="https://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML"></script>
     <link rel="shortcut icon" href="../_static/favicon.ico"/>
     <link rel="top" title="Open GeoTechnical" href="../index.html" />
-    <link rel="up" title="Unofficial AGS Guide" href="index.html" />
+    <link rel="up" title="Unofficial AGS4 Guide" href="index.html" />
     <link rel="next" title="Glossary" href="glossary.html" />
     <link rel="prev" title="AGS4 - Notes on the Rules" href="ags4_rules_notes.html" />
 <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Neuton&amp;subset=latin" type="text/css" media="screen" charset="utf-8" />
@@ -421,7 +421,7 @@ dl.glossary dd {
              accesskey="P">previous</a> |</li>
         <li class="nav-item nav-item-0"><a href="../index.html">ogt</a> &raquo;</li>
           <li class="nav-item nav-item-1"><a href="../ags-projects/index.html" >AGS Projects</a> &raquo;</li>
-          <li class="nav-item nav-item-2"><a href="index.html" accesskey="U">Unofficial AGS Guide</a> &raquo;</li> 
+          <li class="nav-item nav-item-2"><a href="index.html" accesskey="U">Unofficial AGS4 Guide</a> &raquo;</li> 
       </ul>
     </div>  
 
@@ -492,10 +492,11 @@ dl.glossary dd {
              >previous</a> |</li>
         <li class="nav-item nav-item-0"><a href="../index.html">ogt</a> &raquo;</li>
           <li class="nav-item nav-item-1"><a href="../ags-projects/index.html" >AGS Projects</a> &raquo;</li>
-          <li class="nav-item nav-item-2"><a href="index.html" >Unofficial AGS Guide</a> &raquo;</li> 
+          <li class="nav-item nav-item-2"><a href="index.html" >Unofficial AGS4 Guide</a> &raquo;</li> 
       </ul>
     </div>
     <div class="footer" role="contentinfo">
+      Last updated on 2017-01-30.
     </div>
   </body>
 </html>
