--- a/unofficial-ags-guide/glossary.html
+++ b/unofficial-ags-guide/glossary.html
@@ -26,8 +26,8 @@
     <script type="text/javascript" src="https://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML"></script>
     <link rel="shortcut icon" href="../_static/favicon.ico"/>
     <link rel="top" title="Open GeoTechnical" href="../index.html" />
-    <link rel="up" title="Unofficial AGS Guide" href="index.html" />
-    <link rel="next" title="Unofficial AGS Data Dict" href="../ags-projects/unofficial_ags_data_dict.html" />
+    <link rel="up" title="Unofficial AGS4 Guide" href="index.html" />
+    <link rel="next" title="Unofficial AGS4 Data Dict" href="../ags-projects/unofficial_ags_data_dict.html" />
     <link rel="prev" title="AGS4 Data Dictionary" href="ags4_data_dict.html" />
 <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Neuton&amp;subset=latin" type="text/css" media="screen" charset="utf-8" />
 <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Nobile:regular,italic,bold,bolditalic&amp;subset=latin" type="text/css" media="screen" charset="utf-8" />
@@ -414,14 +414,14 @@ dl.glossary dd {
           <a href="../genindex.html" title="General Index"
              accesskey="I">index</a></li>
         <li class="right" >
-          <a href="../ags-projects/unofficial_ags_data_dict.html" title="Unofficial AGS Data Dict"
+          <a href="../ags-projects/unofficial_ags_data_dict.html" title="Unofficial AGS4 Data Dict"
              accesskey="N">next</a> |</li>
         <li class="right" >
           <a href="ags4_data_dict.html" title="AGS4 Data Dictionary"
              accesskey="P">previous</a> |</li>
         <li class="nav-item nav-item-0"><a href="../index.html">ogt</a> &raquo;</li>
           <li class="nav-item nav-item-1"><a href="../ags-projects/index.html" >AGS Projects</a> &raquo;</li>
-          <li class="nav-item nav-item-2"><a href="index.html" accesskey="U">Unofficial AGS Guide</a> &raquo;</li> 
+          <li class="nav-item nav-item-2"><a href="index.html" accesskey="U">Unofficial AGS4 Guide</a> &raquo;</li> 
       </ul>
     </div>  
 
@@ -571,7 +571,7 @@ the engineering behavior of earth materials.</p>
                         title="previous chapter">AGS4 Data Dictionary</a></p>
   <h4>Next topic</h4>
   <p class="topless"><a href="../ags-projects/unofficial_ags_data_dict.html"
-                        title="next chapter">Unofficial AGS Data Dict</a></p>
+                        title="next chapter">Unofficial AGS4 Data Dict</a></p>
 <div id="searchbox" style="display: none" role="search">
   <h3>Quick search</h3>
     <form class="search" action="../search.html" method="get">
@@ -596,17 +596,18 @@ the engineering behavior of earth materials.</p>
           <a href="../genindex.html" title="General Index"
              >index</a></li>
         <li class="right" >
-          <a href="../ags-projects/unofficial_ags_data_dict.html" title="Unofficial AGS Data Dict"
+          <a href="../ags-projects/unofficial_ags_data_dict.html" title="Unofficial AGS4 Data Dict"
              >next</a> |</li>
         <li class="right" >
           <a href="ags4_data_dict.html" title="AGS4 Data Dictionary"
              >previous</a> |</li>
         <li class="nav-item nav-item-0"><a href="../index.html">ogt</a> &raquo;</li>
           <li class="nav-item nav-item-1"><a href="../ags-projects/index.html" >AGS Projects</a> &raquo;</li>
-          <li class="nav-item nav-item-2"><a href="index.html" >Unofficial AGS Guide</a> &raquo;</li> 
+          <li class="nav-item nav-item-2"><a href="index.html" >Unofficial AGS4 Guide</a> &raquo;</li> 
       </ul>
     </div>
     <div class="footer" role="contentinfo">
+      Last updated on 2017-01-30.
     </div>
   </body>
 </html>
