--- a/index.html
+++ b/index.html
@@ -487,6 +487,7 @@ dl.glossary dd {
       </ul>
     </div>
     <div class="footer" role="contentinfo">
+      Last updated on 2017-01-30.
     </div>
   </body>
 </html>
