--- a/ogt-ags-py/_modules/ogt/ogt_group.html
+++ b/ogt-ags-py/_modules/ogt/ogt_group.html
@@ -530,7 +530,7 @@ dl.glossary dd {
 
 <div class="viewcode-block" id="OGTGroup.csv_rows"><a class="viewcode-back" href="../../ogt/ogt_group.html#ogt.ogt_group.OGTGroup.csv_rows">[docs]</a>    <span class="k">def</span> <span class="nf">csv_rows</span><span class="p">(</span><span class="bp">self</span><span class="p">):</span>
         <span class="sd">&quot;&quot;&quot;Returns the csv rows used in this group&quot;&quot;&quot;</span>
-        <span class="k">return</span> <span class="bp">self</span><span class="o">.</span><span class="n">parentDoc</span><span class="o">.</span><span class="n">csv_rows</span><span class="p">[</span><span class="bp">self</span><span class="o">.</span><span class="n">csv_start_index</span><span class="p">:</span><span class="bp">self</span><span class="o">.</span><span class="n">csv_end_index</span><span class="p">]</span>
+        <span class="k">return</span> <span class="bp">self</span><span class="o">.</span><span class="n">docParent</span><span class="o">.</span><span class="n">csv_rows</span><span class="p">[</span><span class="bp">self</span><span class="o">.</span><span class="n">csv_start_index</span><span class="p">:</span><span class="bp">self</span><span class="o">.</span><span class="n">csv_end_index</span><span class="p">]</span>
 </div>
 <div class="viewcode-block" id="OGTGroup.headings_sort"><a class="viewcode-back" href="../../ogt/ogt_group.html#ogt.ogt_group.OGTGroup.headings_sort">[docs]</a>    <span class="k">def</span> <span class="nf">headings_sort</span><span class="p">(</span><span class="bp">self</span><span class="p">):</span>
 
