--- a/references.html
+++ b/references.html
@@ -26,7 +26,7 @@
     <script type="text/javascript" src="https://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML"></script>
     <link rel="shortcut icon" href="_static/favicon.ico"/>
     <link rel="top" title="Open GeoTechnical" href="index.html" />
-    <link rel="prev" title="Unofficial AGS Data Dict" href="ags-projects/unofficial_ags_data_dict.html" />
+    <link rel="prev" title="Unofficial AGS4 Data Dict" href="ags-projects/unofficial_ags_data_dict.html" />
 <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Neuton&amp;subset=latin" type="text/css" media="screen" charset="utf-8" />
 <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Nobile:regular,italic,bold,bolditalic&amp;subset=latin" type="text/css" media="screen" charset="utf-8" />
 <!--[if lte IE 6]>
@@ -412,7 +412,7 @@ dl.glossary dd {
           <a href="genindex.html" title="General Index"
              accesskey="I">index</a></li>
         <li class="right" >
-          <a href="ags-projects/unofficial_ags_data_dict.html" title="Unofficial AGS Data Dict"
+          <a href="ags-projects/unofficial_ags_data_dict.html" title="Unofficial AGS4 Data Dict"
              accesskey="P">previous</a> |</li>
         <li class="nav-item nav-item-0"><a href="index.html">ogt</a> &raquo;</li> 
       </ul>
@@ -609,7 +609,7 @@ serialise json for consistency. See:<ul>
 
   <h4>Previous topic</h4>
   <p class="topless"><a href="ags-projects/unofficial_ags_data_dict.html"
-                        title="previous chapter">Unofficial AGS Data Dict</a></p>
+                        title="previous chapter">Unofficial AGS4 Data Dict</a></p>
 <div id="searchbox" style="display: none" role="search">
   <h3>Quick search</h3>
     <form class="search" action="search.html" method="get">
@@ -634,12 +634,13 @@ serialise json for consistency. See:<ul>
           <a href="genindex.html" title="General Index"
              >index</a></li>
         <li class="right" >
-          <a href="ags-projects/unofficial_ags_data_dict.html" title="Unofficial AGS Data Dict"
+          <a href="ags-projects/unofficial_ags_data_dict.html" title="Unofficial AGS4 Data Dict"
              >previous</a> |</li>
         <li class="nav-item nav-item-0"><a href="index.html">ogt</a> &raquo;</li> 
       </ul>
     </div>
     <div class="footer" role="contentinfo">
+      Last updated on 2017-01-30.
     </div>
   </body>
 </html>
