--- a/docson/index.html
+++ b/docson/index.html
@@ -147,7 +147,7 @@
 <body>
 <div id="form">
     Please enter a schema URL:
-    <input type="text" id="url" size="60">
+    <input type="text" id="url" size="60" value="https://open-geotechnical.github.io/schema/ags_data_extended.json">
 </div>
 <div id="doc"></div>
 </body>
